--- a/index.html
+++ b/index.html
@@ -111,6 +111,35 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
+      <div class="article">
+        <h2>Groundbreaking Discoveries in JavaScript!</h2>
+        <p class="date">Sept 18th, 2018</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aperiam voluptatibus quod voluptatem dolorum quas cum, quia dolorem at saepe ex minus in dolor eius placeat assumenda quidem. Incidunt, reiciendis.</p>
+        <p>In qui quam voluptas harum quibusdam corporis doloribus excepturi molestias officiis magnam cupiditate quos quisquam quo, et dolores maxime consectetur unde laboriosam distinctio odit veniam possimus a esse assumenda! Ipsum.</p>
+        <p>Veniam officia quibusdam quam veritatis! Nesciunt fugiat quibusdam eveniet laborum ad. Et, molestias eligendi, dignissimos adipisci doloribus facilis totam expedita inventore laborum enim, pariatur veritatis esse magni recusandae alias quia.</p>
+        <p>Facere, in eveniet? Tenetur, itaque. Dolor aperiam aliquam consectetur impedit, tenetur facilis libero fugiat modi dignissimos. Enim, odio ut repudiandae fugit iste natus in pariatur esse, veniam id, nulla quisquam!</p>
+        <span class='expandButton'></span>
+      </div>
+      <div class="article">
+        <h2>Always Remember You're Semicolons!</h2>
+        <p class="date">May 15 2019</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores dolorum quia unde amet iste magnam et exercitationem nam nobis sequi adipisci ipsa, inventore repellat consequatur. Labore ipsam doloremque veniam quia?</p>
+        <p>Culpa, accusantium et numquam similique adipisci repellat nam eveniet perspiciatis distinctio libero, incidunt quos commodi laudantium nesciunt architecto qui consectetur ea quia debitis porro. Fugit reiciendis ipsum autem sequi quo.</p>
+        <p>Quis velit perspiciatis aut facilis esse eum placeat, ipsam fugiat qui tenetur accusantium soluta quod praesentium repellendus impedit sint atque expedita fugit dicta consequatur, rerum excepturi saepe vel minus! Tenetur?</p>
+        <p>Est, unde deleniti quisquam iste beatae dolorem aperiam veniam inventore perferendis. Quisquam, sit commodi tempora eos blanditiis voluptate doloremque deserunt modi corrupti voluptatem! Nihil eligendi dignissimos maxime, ullam impedit ea.</p>
+        <p>Cum molestias aliquam nostrum accusantium accusamus fuga id in animi culpa quibusdam, libero fugit vero architecto dignissimos eaque aliquid sunt voluptatibus corporis adipisci, laudantium facilis explicabo! Quia corporis fugiat magni?</p>
+        <span class='expandButton'></span>
+      </div>
+      <div class="article">
+        <h2>CSS + HTML + JavaScript = Amazing!</h2>
+        <p class="date">April 22 2019</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium natus minus voluptatibus, sapiente harum quo id minima, numquam officia delectus nesciunt facere! Qui dicta nesciunt ullam soluta quam ipsa. Exercitationem?</p>
+        <p>Iusto expedita nostrum, perspiciatis sint non saepe quod quisquam molestiae suscipit aut quibusdam officia sit delectus modi culpa fuga aliquid eaque eius maxime molestias fugit. Quos explicabo temporibus molestias blanditiis?</p>
+        <p>Harum laboriosam excepturi, repellendus cumque, pariatur facilis molestiae provident nam ducimus unde quos ex deleniti ipsam ullam! Iste natus tempore perspiciatis nostrum, voluptas, aperiam eos, soluta suscipit quas dolorem quisquam.</p>
+        <p>Autem iusto modi maxime rem laboriosam odio deleniti dolorem facilis quae labore. Beatae, esse porro, quas tenetur magnam aut deleniti quaerat earum ratione vero illo ipsum, ipsa corrupti nobis iure.</p>
+        <p>Saepe at corrupti beatae eum expedita dolorum deserunt animi a repudiandae reiciendis, impedit, ea incidunt quam officia culpa aliquid pariatur ab odit nostrum earum? Voluptatem nam velit iure! Fuga, reiciendis.</p>
+        <span class='expandButton'></span>
+      </div>
     </div>
   </body>
 </html>
